--- a/components/footer.html
+++ b/components/footer.html
@@ -3,6 +3,6 @@
     <div class="fa fw fa-angle-up"></div>
     <span class="screen-reader-text">返回頂端</span>
 </a>
-<p class="copyright">© 2024 <a href="https://www.zh-tw.top/" rel="home">大陸居民臺灣正體字講義</a></p>
-<p style="font-size:13.5px">All rights have been waived by the editors. The website is dedicated to the public domain. <a
-        href="https://www.zh-tw.top/copyright-and-disclaimer-%e7%89%88%e6%ac%8a%e5%92%8c%e5%85%8d%e8%b2%ac%e8%81%b2%e6%98%8e/">Copyright and Disclaimer (版權和免責聲明)</a></p>
+<p class="copyright" style="text-align:center;">© 2024 <a href="https://www.zh-tw.top/" rel="home">大陸居民臺灣正體字講義</a></p>
+<p style="font-size:13.5px;text-align:center;">All rights have been waived by the editors. The website is dedicated to the public domain.<br/>
+    <a href="https://www.zh-tw.top/copyright-and-disclaimer-%e7%89%88%e6%ac%8a%e5%92%8c%e5%85%8d%e8%b2%ac%e8%81%b2%e6%98%8e/">Copyright and Disclaimer (版權和免責聲明)</a></p>
