--- a/components/article_number_comments.html
+++ b/components/article_number_comments.html
@@ -1,5 +1,5 @@
-<a href="https://www.zh-tw.top/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90%e4%b9%8b%e3%80%8c%e8%87%ba%e3%80%81%e6%aa%af%e3%80%81%e9%a2%b1%e3%80%81%e5%8f%b0%e3%80%8d%e2%86%92%e3%80%8c%e5%8f%b0%e3%80%8d/#respond">
-    <span class="fa fw fa-comment">
-    </span>0
-    <span class="resp"> 則留言</span>
+<a href="#respond">
+    <!-- <span class="fa fw fa-comment"></span>0
+    <span class="resp"> 則留言</span> -->
+    <span class="resp">查看留言</span>
 </a>
