--- a/components/navigation.html
+++ b/components/navigation.html
@@ -3,16 +3,30 @@
 		<ul class="primary-menu reset-list-style dropdown-menu">
 			<li id="menu-item-123"
 				class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-6 current_page_item menu-item-123">
-				<a href="https://www.zh-tw.top/" aria-current="page">首頁</a></li>
+				<a href="/" aria-current="page">首頁</a></li>
 			<li id="menu-item-124" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-124"><a
-					href="https://www.zh-tw.top/about/">關於</a></li>
+					href="/about/">關於</a></li>
 			<li id="menu-item-199" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-199"><a
-					href="https://www.zh-tw.top/category/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/">一簡多繁辨析</a>
+					href="/category/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/">一簡多繁辨析</a>
 			</li>
 			<li id="menu-item-198" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-198"><a
-					href="https://www.zh-tw.top/category/%e6%bc%a2%e5%ad%97%e8%b6%a3%e8%ab%87/">漢字趣談</a></li>
+					href="/category/%e6%bc%a2%e5%ad%97%e8%b6%a3%e8%ab%87/">漢字趣談</a></li>
 			<li id="menu-item-125" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-125"><a
-					href="https://www.zh-tw.top/contact/">聯繫我們</a></li>
+					href="/contact/">聯繫我們</a></li>
 		</ul>
 	</div><!-- .section-inner -->
 </div><!-- .navigation -->
+<ul class="mobile-menu reset-list-style" style="display: none;">
+	<li
+		class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-6 current_page_item menu-item-123">
+		<a href="/" aria-current="page">首頁</a></li>
+	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-124"><a
+			href="/about/">關於</a></li>
+	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-199"><a
+			href="/category/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/">一簡多繁辨析</a>
+	</li>
+	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-198"><a
+			href="/category/%e6%bc%a2%e5%ad%97%e8%b6%a3%e8%ab%87/">漢字趣談</a></li>
+	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-125"><a
+			href="/contact/">聯繫我們</a></li>
+</ul><!-- .mobile-menu -->
