--- a/components/header.html
+++ b/components/header.html
@@ -1,7 +1,7 @@
 <div class="header">
 	<div class="section-inner">
 		<div class="blog-title">
-			<a href="https://www.zh-tw.top/" rel="home">大陸居民臺灣正體字講義</a>
+			<a href="/" rel="home">大陸居民臺灣正體字講義</a>
 		</div>
 		<div class="blog-description">
 			<p>Notes on Traditional Chinese Characters in Taiwan for Mainland Chinese Residents</p>
