--- a/components/respond.html
+++ b/components/respond.html
@@ -1,8 +1,8 @@
 <div id="respond" class="comment-respond">
     <h3 id="reply-title" class="comment-reply-title"><span class="fa fw fa-pencil"></span>發佈留言 <small><a rel="nofollow"
-                id="cancel-comment-reply-link" href="https://www.zh-tw.top/#respond"
+                id="cancel-comment-reply-link" href="#respond"
                 style="display:none;">取消回覆</a></small></h3>
-    <form action="https://www.zh-tw.top/wp-comments-post.php" method="post" id="commentform" class="comment-form">
+    <form action="/wp-comments-post.php" method="post" id="commentform" class="comment-form">
         <p class="comment-form-comment"><label for="comment">留言<span class="required">*</span></label><textarea
                 id="comment" name="comment" cols="45" rows="6" required=""></textarea></p>
         <p class="comment-form-author"><label for="author">顯示名稱 <span class="required">*</span></label> <input
