--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
     <div id="block-17" class="widget widget_block widget_search">
         <div class="widget-content">
-            <form role="search" method="get" action="https://www.zh-tw.top/"
+            <form role="search" method="get" action="/search/"
                 class="wp-block-search__button-outside wp-block-search__icon-button wp-block-search"><label
                     class="wp-block-search__label screen-reader-text" for="wp-block-search__input-1">搜尋</label>
                 <div class="wp-block-search__inside-wrapper "><input class="wp-block-search__input"
@@ -21,13 +21,13 @@
             <div class="zeno_font_resizer_container">
                 <p class="zeno_font_resizer" style="text-align: center; font-weight: bold;">
                     <span>
-                        <a href="https://www.zh-tw.top/category/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/#"
+                        <a href="#"
                             class="zeno_font_resizer_minus" title="縮小字型大小" style="font-size: 0.7em;">正<span
                                 class="screen-reader-text"> 縮小字型大小。</span></a>
-                        <a href="https://www.zh-tw.top/category/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/#"
+                        <a href="#"
                             class="zeno_font_resizer_reset" title="重設字型大小">正<span class="screen-reader-text">
                                 重設字型大小。</span></a>
-                        <a href="https://www.zh-tw.top/category/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/#"
+                        <a href="#"
                             class="zeno_font_resizer_add" title="放大字型大小" style="font-size: 1.3em;">正<span
                                 class="screen-reader-text"> 放大字型大小。</span></a>
                     </span>
@@ -56,7 +56,7 @@
                 });
             </script>
             <button id="self_address" class="copy"
-                data-clipboard-text="https://www.zh-tw.top/category/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/">複製本頁網址</button>
+                data-clipboard-text="/">複製本頁網址</button>
             <script>
                 var self_address = document.getElementById('self_address');
                 self_address.setAttribute('data-clipboard-text', window.location.href);
@@ -67,29 +67,35 @@
         <div class="widget-content">
             <div class="is-style-icons wp-block-themeisle-blocks-sharing-icons"
                 id="wp-block-themeisle-blocks-sharing-icons-6d673a04">
-                <div class="social-icons-wrap"><a class="social-icon is-facebook"
-                        href="https://www.facebook.com/sharer/sharer.php?u=https://www.zh-tw.top/category/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/&amp;title=%E5%88%86%E9%A1%9E:%20%3Cspan%3E%E4%B8%80%E7%B0%A1%E5%A4%9A%E7%B9%81%E8%BE%A8%E6%9E%90%3C/span%3E"
-                        target="_blank"><i class="fab fa-facebook-f"></i><span class="v-line"></span></a><a
+                <div class="social-icons-wrap"><a id="facebook_link" class="social-icon is-facebook"
+                        href="https://www.facebook.com/sharer/sharer.php?u=/&amp;title="
+                        target="_blank"><i class="fab fa-facebook-f"></i><span class="v-line"></span></a><a id="twitter_link"
                         class="social-icon is-twitter"
-                        href="http://twitter.com/share?url=https://www.zh-tw.top/category/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/&amp;text=%E5%88%86%E9%A1%9E:%20%3Cspan%3E%E4%B8%80%E7%B0%A1%E5%A4%9A%E7%B9%81%E8%BE%A8%E6%9E%90%3C/span%3E"
-                        target="_blank"><i class="fab fa-twitter"></i><span class="v-line"></span></a><a
+                        href="http://www.x.com/share?url=/&amp;text="
+                        target="_blank"><i class="fab fa-twitter"></i><span class="v-line"></span></a><a id="linkedin_link"
                         class="social-icon is-linkedin"
-                        href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https://www.zh-tw.top/category/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/&amp;title=%E5%88%86%E9%A1%9E:%20%3Cspan%3E%E4%B8%80%E7%B0%A1%E5%A4%9A%E7%B9%81%E8%BE%A8%E6%9E%90%3C/span%3E"
+                        href="https://www.linkedin.com/shareArticle?mini=true&amp;url=/&amp;title="
                         target="_blank"><i class="fab fa-linkedin-in"></i><span class="v-line"></span></a></div>
             </div>
+            <script>
+                var facebook_link = document.getElementById('facebook_link');
+                facebook_link.setAttribute('href', 'https://www.facebook.com/sharer/sharer.php?u=' + window.location.href + '&title=' + document.title);
+                var twitter_link = document.getElementById('twitter_link');
+                twitter_link.setAttribute('href', 'http://www.x.com/share?url=' + window.location.href + '&text=' + document.title);
+                var linkedin_link = document.getElementById('linkedin_link');
+                linkedin_link.setAttribute('href', 'https://www.linkedin.com/shareArticle?mini=true&amp;url=' + window.location.href + '&title=' + document.title);
+            </script>
         </div>
     </div>
     <div id="block-21" class="widget widget_block widget_text">
         <div class="widget-content">
-            <p><a
-                    href="https://www.zh-tw.top/%E3%80%8C%E4%B8%80%E7%B0%A1%E5%A4%9A%E7%B9%81%E8%BE%A8%E6%9E%90%E3%80%8D%E5%AD%B8%E7%BF%92%E7%B4%A2%E5%BC%95%E8%A1%A8/">「一簡多繁辨析」學習索引表</a>
+            <p><a href="/%E3%80%8C%E4%B8%80%E7%B0%A1%E5%A4%9A%E7%B9%81%E8%BE%A8%E6%9E%90%E3%80%8D%E5%AD%B8%E7%BF%92%E7%B4%A2%E5%BC%95%E8%A1%A8/">「一簡多繁辨析」學習索引表</a>
             </p>
         </div>
     </div>
     <div id="block-22" class="widget widget_block widget_text">
         <div class="widget-content">
-            <p><a
-                    href="https://www.zh-tw.top/%E8%87%BA%E7%81%A3%E6%AD%A3%E9%AB%94%E5%AD%97%E8%88%87%E5%A4%A7%E9%99%B8%E7%B0%A1%E5%8C%96%E5%AD%97%E5%B0%8D%E7%85%A7%E7%B4%A2%E5%BC%95%E7%B8%BD%E8%A1%A8/">臺灣正體字與大陸簡化字對照索引總表</a>
+            <p><a href="/%E8%87%BA%E7%81%A3%E6%AD%A3%E9%AB%94%E5%AD%97%E8%88%87%E5%A4%A7%E9%99%B8%E7%B0%A1%E5%8C%96%E5%AD%97%E5%B0%8D%E7%85%A7%E7%B4%A2%E5%BC%95%E7%B8%BD%E8%A1%A8/">臺灣正體字與大陸簡化字對照索引總表</a>
             </p>
         </div>
     </div>
@@ -97,10 +103,10 @@
         <div class="widget-content">
             <ul class="wp-block-categories-list wp-block-categories">
                 <li class="cat-item cat-item-18 current-cat"><a aria-current="page"
-                        href="https://www.zh-tw.top/category/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/">一簡多繁辨析</a>
+                        href="/category/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/">一簡多繁辨析</a>
                 </li>
                 <li class="cat-item cat-item-19"><a
-                        href="https://www.zh-tw.top/category/%e6%bc%a2%e5%ad%97%e8%b6%a3%e8%ab%87/">漢字趣談</a>
+                        href="/category/%e6%bc%a2%e5%ad%97%e8%b6%a3%e8%ab%87/">漢字趣談</a>
                 </li>
             </ul>
         </div>
