--- a/components/article_number_comments.html
+++ b/components/article_number_comments.html
@@ -1,5 +1,6 @@
 <a href="#respond">
     <!-- <span class="fa fw fa-comment"></span>0
     <span class="resp"> 則留言</span> -->
-    <span class="resp">查看留言</span>
+    <a href="#disqus_thread">查看留言</a>
 </a>
+<script id="dsq-count-scr" src="//ntcctmcr.disqus.com/count.js" async></script>
