--- a/components/respond.html
+++ b/components/respond.html
@@ -41,7 +41,7 @@
         const base_url=window.location.protocol+'//'+window.location.hostname+(window.location.port?':'+window.location.port:'')+'/';
         var original_url=window.location.href;
         var new_url=original_url.replace(base_url,'https://www.zh-tw.top/').split('#')[0].split('?')[0];
-        this.page.url = new_url;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.url = new_url.toLowerCase();  // Replace PAGE_URL with your page's canonical URL variable
         console.log(this.page.url);
         //this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
