--- a/components/footer.html
+++ b/components/footer.html
@@ -16,7 +16,7 @@
 <script>
         const base_url=window.location.protocol+'//'+window.location.hostname+(window.location.port?':'+window.location.port:'')+'/';
         var original_url=window.location.href;
-        var new_url=original_url.replace(base_url,'https://www.zh-tw.top/');
+        var new_url=original_url.replace(base_url,'https://www.zh-tw.top/').split('#')[0].split('?')[0].toLowerCase();
         var dynamic=document.getElementById('dynamic');
         dynamic.setAttribute('href',new_url)
 </script>
