--- a/components/before_closing_body.html
+++ b/components/before_closing_body.html
@@ -1,2 +1,1 @@
-<!-- <script id="dsq-count-scr" src="//ntcctmcr.disqus.com/count.js" async></script> -->
-<script id="dsq-count-scr" src="//ntcctmcr.disqus.com/count.js"></script>
+<script id="dsq-count-scr" src="//ntcctmcr.disqus.com/count.js" async></script>
