--- a/components/meta.html
+++ b/components/meta.html
@@ -3,3 +3,4 @@
 <link rel="apple-touch-icon" href="https://www.zh-tw.top/wp-content/uploads/2024/04/favicon-300x300.png">
 <meta name="msapplication-TileImage" content="https://www.zh-tw.top/wp-content/uploads/2024/04/favicon-300x300.png"> -->
 <link rel="icon" href="https://cdn.githubraw.com/zhmgczh/Notes-on-Traditional-Chinese-Characters-in-Taiwan-for-Mainland-Chinese-Residents/master/Logo/favicon.png" sizes="528x528">
+<script id="dsq-count-scr" src="//ntcctmcr.disqus.com/count.js" async></script>
