--- a/components/respond.html
+++ b/components/respond.html
@@ -2,7 +2,7 @@
     <h3 id="reply-title" class="comment-reply-title"><span class="fa fw fa-pencil"></span>發佈留言 <small><a rel="nofollow"
                 id="cancel-comment-reply-link" href="#respond"
                 style="display:none;">取消回覆</a></small></h3>
-    <form action="https://www.zh-tw.top/wp-comments-post.php" method="post" id="commentform" class="comment-form">
+    <form action="<!--|||||main_base_url|||||-->wp-comments-post.php" method="post" id="commentform" class="comment-form">
         <p class="comment-form-comment"><label for="comment">留言<span class="required">*</span></label><textarea
                 id="comment" name="comment" cols="45" rows="6" required=""></textarea></p>
         <p class="comment-form-author"><label for="author">顯示名稱 <span class="required">*</span></label> <input
@@ -22,11 +22,11 @@
         </p>
     </form>
 </div>--><!-- #respond -->
-<!-- <p style="color:red;">注意這裡是《大陸居民臺灣正體字講義》的靜態備用站點，不顯示任何留言，如須顯示留言請<a id="dynamic" href="https://www.zh-tw.top/" target="_blank">點擊這裡</a>訪問本站之動態站點。</p>
+<!-- <p style="color:red;">注意這裡是《大陸居民臺灣正體字講義》的靜態備用站點，不顯示任何留言，如須顯示留言請<a id="dynamic" href="<!--|||||main_base_url|||||-->" target="_blank">點擊這裡</a>訪問本站之動態站點。</p>
 <script>
-        const base_url=window.location.protocol+'//'+window.location.hostname+(window.location.port?':'+window.location.port:'')+'/';
+        var base_url=window.location.protocol+'//'+window.location.hostname+(window.location.port?':'+window.location.port:'')+'/';
         var original_url=window.location.href;
-        var new_url=original_url.replace(base_url,'https://www.zh-tw.top/').split('#')[0].split('?')[0].toLowerCase();
+        var new_url=original_url.replace(base_url,'<!--|||||main_base_url|||||-->').split('#')[0].split('?')[0].toLowerCase();
         var dynamic=document.getElementById('dynamic');
         dynamic.setAttribute('href',new_url)
 </script> -->
@@ -36,9 +36,9 @@
     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
     var disqus_config = function () {
-        const base_url=window.location.protocol+'//'+window.location.hostname+(window.location.port?':'+window.location.port:'')+'/';
+        var base_url=window.location.protocol+'//'+window.location.hostname+(window.location.port?':'+window.location.port:'')+'/';
         var original_url=window.location.href;
-        var new_url=original_url.replace(base_url,'https://www.zh-tw.top/').split('#')[0].split('?')[0].toLowerCase();
+        var new_url=original_url.replace(base_url,'<!--|||||main_base_url|||||-->').split('#')[0].split('?')[0].toLowerCase();
         this.page.url = new_url;  // Replace PAGE_URL with your page's canonical URL variable
         console.log(this.page.url);
         //this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
