--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -89,13 +89,13 @@
     </div>
     <div id="block-21" class="widget widget_block widget_text">
         <div class="widget-content">
-            <p><a href="/%E3%80%8C%E4%B8%80%E7%B0%A1%E5%A4%9A%E7%B9%81%E8%BE%A8%E6%9E%90%E3%80%8D%E5%AD%B8%E7%BF%92%E7%B4%A2%E5%BC%95%E8%A1%A8/">「一簡多繁辨析」學習索引表</a>
+            <p><a href="/%e3%80%8c%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90%e3%80%8d%e5%ad%b8%e7%bf%92%e7%b4%a2%e5%bc%95%e8%a1%a8/">「一簡多繁辨析」學習索引表</a>
             </p>
         </div>
     </div>
     <div id="block-22" class="widget widget_block widget_text">
         <div class="widget-content">
-            <p><a href="/%E8%87%BA%E7%81%A3%E6%AD%A3%E9%AB%94%E5%AD%97%E8%88%87%E5%A4%A7%E9%99%B8%E7%B0%A1%E5%8C%96%E5%AD%97%E5%B0%8D%E7%85%A7%E7%B4%A2%E5%BC%95%E7%B8%BD%E8%A1%A8/">臺灣正體字與大陸簡化字對照索引總表</a>
+            <p><a href="/%e8%87%ba%e7%81%a3%e6%ad%a3%e9%ab%94%e5%ad%97%e8%88%87%e5%a4%a7%e9%99%b8%e7%b0%a1%e5%8c%96%e5%ad%97%e5%b0%8d%e7%85%a7%e7%b4%a2%e5%bc%95%e7%b8%bd%e8%a1%a8/">臺灣正體字與大陸簡化字對照索引總表</a>
             </p>
         </div>
     </div>
