--- a/components/category_script.html
+++ b/components/category_script.html
@@ -40,5 +40,5 @@
         }
         yijianduofanbianxi_container.innerHTML = elements.join('\n');
     }
-    request_json('category_database.js', (data) => select_category(data, '一簡多繁辨析', 6))
+    request_json('/category_database.js', (data) => select_category(data, '一簡多繁辨析', 6))
 </script>
