--- a/components/漢字趣談_list.html
+++ b/components/漢字趣談_list.html
@@ -98,5 +98,5 @@
         }
         hanziqutan_container.innerHTML = elements.join('\n');
     }
-    request_json('category_database.js', (data) => select_hanziqutan(data, '漢字趣談', 6))
+    request_json('/category_database.js', (data) => select_hanziqutan(data, '漢字趣談', 6))
 </script>
