--- a/components/一簡多繁辨析_list.html
+++ b/components/一簡多繁辨析_list.html
@@ -166,5 +166,5 @@
         }
         yijianduofanbianxi_container.innerHTML = elements.join('\n');
     }
-    request_json('category_database.js', (data) => select_yijianduofanbianxi(data, '一簡多繁辨析', 6))
+    request_json('/category_database.js', (data) => select_yijianduofanbianxi(data, '一簡多繁辨析', 6))
 </script>
