--- a/components/category_script.html
+++ b/components/category_script.html
@@ -12,33 +12,57 @@
         };
         xhr.send();
     }
+    function process_page_navigation(page, total_pages) {
+
+    }
     function select_category(data, tag, page) {
         var keys = Object.keys(data[tag]);
+        var total_pages = Math.ceil(keys.length / 10);
+        var total_page_number = document.getElementById('total_page_number');
+        total_page_number.innerHTML = total_pages;
+        if (page < 1) {
+            page = 1;
+        }
+        else if (page > total_pages) {
+            page = total_pages;
+        }
+        var current_page_index = document.getElementById('current_page_index');
+        current_page_index.innerHTML = page;
+        var left = (page - 1) * 10;
+        var right = Math.min(page * 10, total_pages);
         var container = document.getElementById('posts');
         var article_post_sample = document.getElementById('article_post_sample');
-        elements = []
-        for (var i = 0; i < n; ++i) {
-            var new_element = article_post_sample.outerHTML.replace(' id="article_post_sample" style="display:none;"', '');
-            new_element = new_element.replace('|||||category|||||', tag);
-            new_element = new_element.replace('|||||quote_category|||||', encodeURIComponent(tag)).toLowerCase();
-            new_element = new_element.replace('|||||url|||||', data[tag][i]['url']);
-            new_element = new_element.replace('|||||original_url|||||', '<!--|||||main_base_url|||||-->'+data[tag][i]['url']);
-            new_element = new_element.replace('|||||title|||||', data[tag][i]['title']);
-            var description = data[tag][indices[i]]['description'];
-            if (100 < description.length) {
-                description = description.substr(0, 100) + '…';
-            }
-            new_element = new_element.replace('|||||description|||||', description)
-            elements[i] = new_element;
+        var page_post_sample = document.getElementById('page_post_sample');
+        elements = [];
+        index = 0;
+        for (var i = left; i < right; ++i) {
+            var new_element = article_post_sample.outerHTML.replaceAll(' id="article_post_sample" style="display:none;"', '');
+            new_element = new_element.replaceAll('|||||category|||||', tag);
+            new_element = new_element.replaceAll('|||||quote_category|||||', encodeURIComponent(tag)).toLowerCase();
+            new_element = new_element.replaceAll('|||||url|||||', data[tag][i]['url']);
+            new_element = new_element.replaceAll('|||||original_url|||||', '<!--|||||main_base_url|||||-->' + data[tag][i]['url'].replace('/',''));
+            new_element = new_element.replaceAll('|||||title|||||', data[tag][i]['title']);
+            elements[index++] = new_element;
         }
-        elements[n] = yijianduofanbianxi_sample.outerHTML;
-        if (n <= 2) {
-            yijianduofanbianxi_container.setAttribute('class', 'is-grid o-posts-grid-columns-' + n.toString());
-        }
-        else {
-            yijianduofanbianxi_container.setAttribute('class', 'is-grid o-posts-grid-columns-3');
-        }
-        yijianduofanbianxi_container.innerHTML = elements.join('\n');
+        elements[index++] = article_post_sample.outerHTML;
+        elements[index++] = page_post_sample.outerHTML;
+        container.innerHTML = elements.join('\n');
+        process_page_navigation(page, total_pages);
     }
-    request_json('/category_database.js', (data) => select_category(data, '一簡多繁辨析', 6))
+    function get_query_variable(variable) {
+        var query = window.location.search.substring(1);
+        var vars = query.split("&");
+        for (var i = 0; i < vars.length; i++) {
+            var pair = vars[i].split("=");
+            if (pair[0] == variable) {
+                return pair[1];
+            }
+        }
+        return '';
+    }
+    page = get_query_variable('page')
+    if ('' == page) {
+        page = 1;
+    }
+    request_json('/category_database.js', (data) => select_category(data, '<!--|||||category|||||-->', page))
 </script>
