--- a/components/一簡多繁辨析_list.html
+++ b/components/一簡多繁辨析_list.html
@@ -143,18 +143,18 @@
         var indices = get_random_subarray(keys, n);
         var yijianduofanbianxi_container = document.getElementById('yijianduofanbianxi_container');
         var yijianduofanbianxi_sample = document.getElementById('yijianduofanbianxi_sample');
-        elements = []
+        elements = [];
         for (var i = 0; i < n; ++i) {
-            var new_element = yijianduofanbianxi_sample.outerHTML.replace(' id="yijianduofanbianxi_sample" style="display:none;"', '');
-            new_element = new_element.replace('|||||tag|||||', tag);
-            new_element = new_element.replace('|||||quote_tag|||||', encodeURIComponent(tag)).toLowerCase();
-            new_element = new_element.replace('|||||url|||||', data[tag][indices[i]]['url']);
-            new_element = new_element.replace('|||||title|||||', data[tag][indices[i]]['title']);
+            var new_element = yijianduofanbianxi_sample.outerHTML.replaceAll(' id="yijianduofanbianxi_sample" style="display:none;"', '');
+            new_element = new_element.replaceAll('|||||tag|||||', tag);
+            new_element = new_element.replaceAll('|||||quote_tag|||||', encodeURIComponent(tag)).toLowerCase();
+            new_element = new_element.replaceAll('|||||url|||||', data[tag][indices[i]]['url']);
+            new_element = new_element.replaceAll('|||||title|||||', data[tag][indices[i]]['title']);
             var description = data[tag][indices[i]]['description'];
             if (100 < description.length) {
                 description = description.substr(0, 100) + '…';
             }
-            new_element = new_element.replace('|||||description|||||', description)
+            new_element = new_element.replaceAll('|||||description|||||', description)
             elements[i] = new_element;
         }
         elements[n] = yijianduofanbianxi_sample.outerHTML;
