--- a/components/category_script.html
+++ b/components/category_script.html
@@ -29,7 +29,7 @@
         var current_page_index = document.getElementById('current_page_index');
         current_page_index.innerHTML = page;
         var left = (page - 1) * 10;
-        var right = Math.min(page * 10, total_pages);
+        var right = Math.min(page * 10, keys.length);
         var container = document.getElementById('posts');
         var article_post_sample = document.getElementById('article_post_sample');
         var page_post_sample = document.getElementById('page_post_sample');
