--- a/components/meta.html
+++ b/components/meta.html
@@ -3,3 +3,12 @@
 <link rel="apple-touch-icon" href="<!--|||||main_base_url|||||-->wp-content/uploads/2024/04/favicon-300x300.png">
 <meta name="msapplication-TileImage" content="<!--|||||main_base_url|||||-->wp-content/uploads/2024/04/favicon-300x300.png"> -->
 <link rel="icon" href="https://cdn.githubraw.com/zhmgczh/Notes-on-Traditional-Chinese-Characters-in-Taiwan-for-Mainland-Chinese-Residents/master/Logo/favicon.png" sizes="528x528">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TYPRYG7GXC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TYPRYG7GXC');
+</script>
