--- a/components/article_related.html
+++ b/components/article_related.html
@@ -1,5 +1,5 @@
 <div style="clear:both; margin-top:10em; margin-bottom:1em;">
-    <a  id="article_related_link" href="/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90%e4%b9%8b%e3%80%8c%e8%a9%ab%e3%80%81%e5%90%92%e3%80%8d%e2%86%92%e3%80%8c%e8%af%a7%e3%80%81%e5%92%a4%e3%80%81%e5%90%92%e3%80%8d/"
+    <a  id="article_related_link" href="/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90%e4%b9%8b%e3%80%8c%e8%87%ba%e3%80%81%e6%aa%af%e3%80%81%e9%a2%b1%e3%80%81%e5%8f%b0%e3%80%8d%e2%86%92%e3%80%8c%e5%8f%b0%e3%80%8d/"
         target="_self" rel="dofollow" class="u40d968d20e64592e62438cec05dc6506"><!-- INLINE RELATED POSTS 1/3 //-->
         <style>
             .u40d968d20e64592e62438cec05dc6506 {
@@ -47,7 +47,7 @@
         <div style="padding-left:1em; padding-right:1em;">
             <span class="ctaText">相關條目或文章推薦：</span>
             &nbsp;
-            <span id="article_related_title" class="postTitle">一簡多繁辨析之「詫、吒」→「诧、咤、吒」</span>
+            <span id="article_related_title" class="postTitle">一簡多繁辨析之「臺、檯、颱、台」→「台」</span>
         </div>
     </a>
 </div>
