--- a/components/search_script.html
+++ b/components/search_script.html
@@ -149,7 +149,7 @@
 <div class="post-inner">
 <div class="post-content entry-content">
 <p>找不到符合條件的項目，請使用搜尋功能再試一次。</p>
-<form method="get" class="search-form" id="search-form-6622074c723e6" action="https://www.zh-tw.top/">
+<form method="get" class="search-form" id="search-form-6622074c723e6" action="/search/">
 <input type="search" class="search-field" placeholder="請輸入搜尋關鍵字" name="s" id="search-form-6622074c723e7"> 
 <button type="submit" class="search-button"><div class="fa fw fa-search"></div><span class="screen-reader-text">搜尋</span></button>
 </form>					
