--- a/components/article_number_comments.html
+++ b/components/article_number_comments.html
@@ -18,7 +18,7 @@
     {
         if('查看留言'!=count_comments.innerHTML)
         {
-            display_comments.innerHTML=display_comments.replace('查看留言',count_comments.innerHTML);
+            display_comments.innerHTML=display_comments.innerHTML.replace('查看留言',count_comments.innerHTML);
         }
         else
         {
